--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ a{
 /* font */
 p,h1,h2,h3,a{
   font-family: 'Nanum Myeongjo', serif;
+  color: white;
 }
 
 /* iframe clock container */
@@ -92,4 +93,19 @@ h1,h2,p {
 canvas{
   align-self: center;
   align-items: center;
+}
+
+/* Gallery */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+.gallery img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+  border: 1px solid #ddd;
+  margin: 5px;
 }
