--- a/css2.css
+++ b/css2.css
@@ -3,22 +3,22 @@ body {
 }
 
 .container {
-  display : grid ;
-  grid-template-columns : 10fr 1fr 1fr 10fr ;
+  display: grid;
+  grid-template-columns: 10fr 1fr 1fr 10fr;
   border: 4px black;
   height: 250vh;
 }
 
 .column {
-  flex : 1 ;
-  padding : 20 px ;
-  border : 1 px solid red ;
+  flex: 1;
+  padding: 20 px;
+  border: 1 px solid red;
 }
 
 /** MIDDLE COL **/
 
 .middle {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
@@ -35,22 +35,26 @@ body {
   justify-content: space-between;
 
   height: fit-content;
-  border: 4px solid ;
+  border: 4px solid;
   font-size: 4.5vw;
 }
 
-.anchorBarLink{
+.anchorBarLink {
   margin-top: 10vw;
   margin-bottom: 20vw;
 }
 
-a{
+a {
   text-decoration: none;
   /* color: white; */
 }
 
 /* font */
-p,h1,h2,h3,a{
+p,
+h1,
+h2,
+h3,
+a {
   /* font-family: 'Nanum Myeongjo', serif; */
 
   font-family: "Major Mono Display", monospace;
@@ -59,6 +63,7 @@ p,h1,h2,h3,a{
 
   color: white;
 }
+
 
 /* iframe clock container */
 
@@ -69,7 +74,7 @@ p,h1,h2,h3,a{
   /* This aspect ratio ensures the iframe scales properly */
   height: 0;
   overflow: hidden;
-  border: none ;
+  border: none;
   /* Hides the scrollbar */
 }
 
@@ -83,24 +88,27 @@ iframe {
   overflow: none;
   /* Removes the border around the iframe */
 }
-.clockwrapper{
-  overflow: hidden ;
+
+.clockwrapper {
+  overflow: hidden;
 }
 
-#clock{
+#clock {
   width: 44vw;
   height: 44vw;
 }
 
 
 /* add some space from the borders in h1 h2 and p tags */
-h1,h2,p {
-  padding:10px ;
+h1,
+h2,
+p {
+  padding: 10px;
 }
 
 /* flowfield */
 
-canvas{
+canvas {
   align-self: center;
   align-items: center;
 }
@@ -120,15 +128,15 @@ canvas{
   margin: 5px;
 }
 
-.lostfaith{
+.lostfaith {
   box-shadow: 0px 0px 40px #249da3;
   width: 45vw;
-  /* padding: 1vw; */ 
+  /* padding: 1vw; */
   scale: 90%;
 }
 
-.temperance{
+.temperance {
   box-shadow: 0px 0px 40px #912120;
-    width: 45vw;
-    scale: 90%;
+  width: 45vw;
+  scale: 90%;
 }
